--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
+### React.js Default ###
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
-# development
-/.vscode
 
 # testing
 /coverage
@@ -24,3 +22,21 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
